<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/username"
    />
    
    <EditText android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="false"
    />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/password"
    />
    
    <EditText android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="true"
    /> 
    <LinearLayout android:orientation="horizontal"
    			  android:layout_width="fill_parent"
    			  android:layout_height="wrap_content">
			  
    <Button android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
    />
    <Button android:id="@+id/cancel_login"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/cancel"
    />
	</LinearLayout>
<LinearLayout
     	android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >
    <TextView 
         android:id="@+id/clickToSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:paddingTop="50dip"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/blue"
        android:text="@string/clickToSignUp"
        android:onClick="onClick"
        android:clickable="true"
        android:gravity="center"
    />
    
        <TextView 
         android:id="@+id/forgottenPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="@color/blue"
        android:text="@string/ForgottenPassword"
        android:onClick="onClick"
        android:clickable="true"
        android:paddingTop="20dip"
        android:gravity="center"
    />
    

</LinearLayout>
</LinearLayout>

